@@ -79,9 +79,9 @@ fileno_test (void)
   ACE_HANDLE fn;
 
   fn = ACE_OS::fileno (stdin);
-  if (fn == (ACE_HANDLE)-1)
+  if (fn == ACE_INVALID_HANDLE)
     {
-      ACE_ERROR ((LM_ERROR, ACE_TEXT ("fileno returned -1 (stdin).\n")));
+      ACE_ERROR ((LM_ERROR, ACE_TEXT ("fileno(stdin) returned ACE_INVALID_HANDLE.\n")));
       test_status = -1;
     }
   else if (fn != ACE_STDIN)
@@ -91,18 +91,18 @@ fileno_test (void)
     }
 
   fn = ACE_OS::fileno (stdout);
-  if (fn == (ACE_HANDLE)-1)
+  if (fn == ACE_INVALID_HANDLE)
     {
-      ACE_ERROR ((LM_ERROR, ACE_TEXT ("fileno returned -1 (stdout).\n")));
+      ACE_ERROR ((LM_ERROR, ACE_TEXT ("fileno(stdout) returned ACE_INVALID_HANDLE.\n")));
       test_status = -1;
     }
   else
 #if defined (ACE_WIN32)
   // Check if stdout is not associated with an output stream.
-  // This not an error.
-  if (fn == (ACE_HANDLE)-2)
+  // This is not an error.
+  if (fn == reinterpret_cast<ACE_HANDLE>(-2))
     {
-      ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("fileno returned -2 (stdout).\n")));
+      ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("fileno(stdout) returned -2.\n")));
     }
   else
 #else
@@ -114,18 +114,18 @@ fileno_test (void)
 #endif
 
   fn = ACE_OS::fileno (stderr);
-  if (fn == (ACE_HANDLE)-1)
+  if (fn == ACE_INVALID_HANDLE)
     {
-      ACE_ERROR ((LM_ERROR, ACE_TEXT ("fileno returned -1 (stderr).\n")));
+      ACE_ERROR ((LM_ERROR, ACE_TEXT ("fileno(stderr) returned ACE_INVALID_HANDLE.\n")));
       test_status = -1;
     }
   else
 #if defined (ACE_WIN32)
   // Check if stderr is not associated with an output stream.
-  // This not an error.
-  if (fn == (ACE_HANDLE)-2)
+  // This is not an error.
+  if (fn == reinterpret_cast<ACE_HANDLE>(-2))
     {
-      ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("fileno returned -2 (stderr).\n")));
+      ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("fileno(stderr) returned -2.\n")));
     }
   else
 #else
