@@ -1,3 +1,9 @@
+Tue Oct 27 07:55:38 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * tests/OS_Test.cpp:
+          Use ACE_INVALID_HANDLE instead of -1. Changed C-style casts
+          to C++ casts.
+
 Mon Oct 26 22:08:38 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/config-win32-borland.h:
